<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <Button
        android:id="@+id/back_btn_login"
        android:layout_width="20dp"
        android:layout_height="28dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/dosis"
        android:text="@string/log_in_title"
        android:textSize="40sp"
        android:textColor="@color/navy_main"
        android:letterSpacing="0.1"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_toast"
        android:id="@+id/custom_toast_layout_login"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/login_toast_message"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#FFE600" />

        <TextView
            android:id="@+id/login_toast_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_centerVertical="true"
            android:text="This is a test"
            android:fontFamily="@font/quicksand"
            android:textColor="#555555"
            android:textSize="14sp" />


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_ph"
        android:layout_marginTop="17dp"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:startIconTint="@color/navy_main">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_ph"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/navy_main">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.App.Button"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/log_in"
        android:backgroundTint="@color/pink_button"
        />

    <View
        android:layout_width="245dp"
        android:layout_height="0.75dp"
        android:background="#66979797"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signup_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/sign_up"
            android:layout_marginStart="5dp"
            android:textColor="@color/pink_button"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>


