<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/signup_back_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/back_btn_signup"
            android:layout_width="20dp"
            android:layout_height="28dp"
            android:layout_marginStart="19dp"
            android:background="@drawable/back_button"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dosis"
            android:text="@string/sign_up_title"
            android:textSize="40sp"
            android:textColor="@color/navy_main"
            android:letterSpacing="0.1"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_below="@id/signup_back_group"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_toast"
            android:id="@+id/custom_toast_layout_signup"
            android:layout_marginBottom="25dp">

            <View
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/signup_toast_message"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#FFE600" />

            <TextView
                android:id="@+id/signup_toast_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:text="This is a test"
                android:fontFamily="@font/quicksand"
                android:textColor="#555555"
                android:textSize="14sp" />


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litFullName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/full_name_ph"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/navy_main">
            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litEmail"
            style="@style/TextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_ph"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:startIconTint="@color/navy_main">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litPassword"
            style="@style/TextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password_ph"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/navy_main">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litConfirmPassword"
            style="@style/TextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirm_password_ph"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/navy_main">
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litAddress"
            style="@style/TextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/address_ph"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24"
            app:startIconTint="@color/navy_main">
            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            style="@style/Widget.App.Button"
            android:id="@+id/signup_btn"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/sign_up"
            android:backgroundTint="@color/pink_button"/>

    </LinearLayout>




</RelativeLayout>